--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
     "prompt-sync": "^4.2.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.5",
+    "@types/mocha": "^10.0.2"
   }
 }
